log/build_2023-10-18_10-49-53/castelet/stderr.log
  File "/home/keny/MANOS_ws/install/castelet/lib/python3.8/site-packages/castelet/castelet.py", line 12
    from castelet/turtleSimControl/TurtleSimControl import TurtleSimControl
                 ^
SyntaxError: invalid syntax

